--- a/index.html
+++ b/index.html
@@ -7,19 +7,18 @@
 </head>
 <body>
     <img src="img/meuAvatar.png" alt="avatar da Maria Julia" srcset="" />
-    <p>Eu sou Alexandra_</p>
-    <h1>Eu ensino Programação</h1>
+    <p>Eu sou Maju_</p>
+    <h1>Eu aprendo sobre programação</h1>
     <p>
-      Sou Engenheira de Computação e Pedagoga. Ensino pensamento computacional
-      para estudantes do Ensino Fundamental e Médio. Ensino sobre pensamento
-      computacional usando HTML, CSS e JavaScript.
+     Sou aluna de computação, estudo sobre pensamento computacional, sou aluna do ensino médio,
+     tenho aulas sobre pensamento computacional usando HTML, CSS e JavaScript.
     </p>
     <p>Minhas habilidades</p>
     <div>
-        <p>HTML</p>
-        <p>CSS</p>
-        <p>JavaScript</p>
-        <p>Scratch</p>
+        <p>jogar vôlei</p>
+        <p>fazer sorvete</p>
+        <p>falar bem em publico</p>
+        <p>cozinhar</p>
       </div>
 
 </body>
