--- a/index.html
+++ b/index.html
@@ -27,3 +27,36 @@
 
 </body>
 </html>
+<p class="badge text-bg-secondary">HTML</p>
+<p class="badge text-bg-secondary">CSS</p>
+<p class="badge text-bg-secondary">JavaScript</p>
+<p class="badge text-bg-secondary">Scratch</p>
+<p class="badge text-bg-secondary">Comunicação</p>
+<p class="badge text-bg-secondary">Responsavel</p>
+<p class="badge text-bg-secondary">Comprometida</p>
+</div>
+</header>
+<main class="container">
+<h2>Meus projetos</h2>
+<div class="row">
+<div class="col-md-4">
+<div class="card">
+<img src="img/projeto-1.png" class="card-img-top" alt="imagem de projeto da biblioteca virtual"/>
+<div class="card-body">
+<h5 class="card-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
+<p class="card-text">
+Este projeto é uma página web que apresenta uma lista dos meus livros
+favoritos, incluindo informações sobre os autores, datas de publicação e
+links para compra na Amazon. A página é estilizada com CSS para uma
+visualização agradável e usa fontes externas do Google Fonts.
+</p>
+ <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal1">Veja o projeto</button>
+
+</div>
+</div>
+</div>
+</div>
+</main>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js&quot; integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
+</body>
+</html>
