--- a/index.html
+++ b/index.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portifolio Maju neves</title>
+        <link rel="stylesheet" href="style.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
 </head>
-
 <body>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
+<header class="container text-center">
+<img src="img/meuAvatar.png" alt="avatar da Maria Julia" srcset="" />
 
-    <img src="img/meuAvatar.png" alt="avatar da Maria Julia" srcset="" />
-    <p>Eu sou Maju_</p>
-    <h1>Eu aprendo sobre programação</h1>
-    <p>
-     Sou aluna de computação, estudo sobre pensamento computacional, sou aluna do ensino médio,
-     tenho aulas sobre pensamento computacional usando HTML, CSS e JavaScript.
+  <p class="lead">Eu sou Maju</p>
+<h1>Sobre mim:</h1>
+Sou estudante do ensino medio, tenho 16 anos, pretendo fazer psicologia, amo harry potter
     </p>
     <p>Minhas habilidades</p>
     <div>
@@ -23,22 +21,12 @@
         <p>fazer sorvete</p>
         <p>falar bem em publico</p>
         <p>cozinhar</p>
+  
       </div>
-
-</body>
-</html>
-<p class="badge text-bg-secondary">HTML</p>
-<p class="badge text-bg-secondary">CSS</p>
-<p class="badge text-bg-secondary">JavaScript</p>
-<p class="badge text-bg-secondary">Scratch</p>
-<p class="badge text-bg-secondary">Comunicação</p>
-
-</div>
-</header>
-<main class="container">
-<h2>Meus projetos</h2>
-<div class="row">
-<div class="row">
+    </header>
+    <main class="container">
+      <h2>Meus projetos</h2>
+      <div class="row">
         <div class="col-md-4">
         <div class="card">
           <img src="img/projeto-1.png" class="card-img-top" alt="imagem de projeto da biblioteca virtual" />
@@ -56,14 +44,13 @@
           </div>
            <div class="col-md-4">
         <div class="card">
-          <img src="img/projeto-2.png" class="card-img-top" alt="imagem de projeto da biblioteca virtual" />
+          <img src="img/projeto-2.png" class="card-img-top" alt="imagem do projeto uma jornada interativa" />
           <div class="card-body">
             <h5 class="card-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
           <p class="card-text">
-           Este projeto é uma página web que apresenta uma lista dos meus livros
-      favoritos, incluindo informações sobre os autores, datas de publicação e
-      links para compra na Amazon. A página é estilizada com CSS para uma
-      visualização agradável e usa fontes externas do Google Fonts.
+          Este projeto é um jogo interativo baseado em navegador que explora o impacto e as implicações da Inteligência Artificial (IA) na sociedade, permitindo que as
+        pessoas jogadoras façam escolhas que influenciam o desenrolar de uma narrativa sobre o
+        futuro da IA.
           </p>
            <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal1">Veja o projeto</button>
           </div>
@@ -74,4 +61,3 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
 </body>
 </html>
-
