--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <header class="container text-center">
-<img src="img/meuAvatar.png" alt="avatar da Maria Julia" srcset="" />
+<img src="img/meuAvatar.png" alt="avatar da Maria Julia" class="rounded-circle" width="150" height="150" srcset=""/>
 
   <p class="lead">Eu sou Maju</p>
 <h1>Sobre mim:</h1>
