--- a/index.html
+++ b/index.html
@@ -56,6 +56,26 @@ Sou estudante do ensino medio, tenho 16 anos, pretendo fazer psicologia, amo har
           </div>
           </div>
           </div>
+          <div class="col-md-4">
+        <div class="card">
+          <img src="img/projeto-3.png" class="card-img-top" alt="imagem do projeto explorando o universo: Uma aventura interativa em astronomia com o scratch" />
+          <div class="card-body">
+            <h5 class="card-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
+          <p class="card-text">
+          Este projeto Scratch cria uma experiência interativa educativa sobre
+        astronomia, permitindo aos usuários explorar informações sobre constelações, eclipses, e a
+        forma da Terra através de cenários dinâmicos e diálogos informativos.
+          </p>
+           <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal1">Veja o projeto</button>
+          </div>
+          </div>
+          </div>
+        </div>
+          </main>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
+</body>
+</html>
+
         </div>
           </main>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
